--- a/main_index.html
+++ b/main_index.html
@@ -32,7 +32,7 @@
 	     <h2> About Me </h2>
     </div>
   
-  <img id = "mainimage" alt= "IMG" src="assets/images/img_5137.png">
+  <img id = "mainimage" alt= "IMG" src="assets/images/profile.png">
     <div id="content">
     <p>Sergey is a Technology Professional and QA Lead at Revel Systems POS, San Francisco based Startup. Passion and love to technology brought him from Financial Industry to the Tech World. He started his current career as a QA Intern and built it in to the QA Lead Position/QA Project Manager.</p>
 
