--- a/main_index.html
+++ b/main_index.html
@@ -41,14 +41,14 @@
   </div>
 
   <div id="connectwithme" >
-     <h3> Connect with me </h3>
+     <h3 id="h3"> Connect with me </h3>
   <a href="https://github.com" target="_blank"><img src="assets/images/Github.png" alt="Github" class="socialMedia"></a>
   <a href="https://www.linkedin.com/in/sergey-shcherbakov-34743460" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn" class="socialMedia"></a>
   <a href="https://stackoverflow.com/users/story/7303797" target="_blank"><img src="assets/images/Stack.png" alt="Stack" class="socialMedia"></a>
   </div>
 </div>
 
-<footer>
+<footer id="indexfooter">
 <p>Copyright @ 2017 Sergey Shcherbakov</p>
 </footer>
 
