--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Sergey Shcherbakov</h1>
-    
- <a href="contact.html" target="_blank">
+   
+   <a href="contact.html" target="_blank">
  <div id="contact"> 
     <h4> Contact </h4>
  </div>
@@ -16,6 +16,12 @@
 <a href="portfolio.html" target="_blank">
 <div id="portfolio"> 
     <h4> Portfolio </h4>
+</div>
+</a>
+ 
+<a href="main_index.html" target="_blank">
+<div id="about"> 
+    <h4> About </h4> 
 </div>
 </a>
  
