--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,7 @@
 </div>
 </a>
  
-<a href="#">
-<div id="about"> 
-    <h4> About </h4> 
-</div>
-</a>
+
 
 
 <div id="contactbox">
@@ -49,7 +45,7 @@
   <br>
   <label for="message"> Message</label>
   <br>
-  <input id="message" name="message" value="" type="text">
+  <textarea id="message123" rows="15" name="message"></textarea>
   <br>
    </form>
   <br>
